ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc5
    • Affects Version/s: 2.8.0-rc4
    • Component/s: Diagnostics
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Perhaps on other 2.8.0-rcX versions, but at least on 2.8.0-rc4 the response of the command {serverStatus:1, oplog:1} to a config server now returns an error:

      $ mongo some-config-svr-host:40031
      MongoDB shell version: 2.8.0-rc4
      connecting to: some-config-svr-host:40031/test
      configsvr> db.runCommand({serverStatus:1,oplog:1})
      {
      	"opcounters" : {
      		"insert" : 4960,
      		"query" : 21203,
      		"update" : 7866,
      		"delete" : 2023,
      		"getmore" : 7,
      		"command" : 16578
      	},
      	"opcountersRepl" : {
      		"insert" : 0,
      		"query" : 0,
      		"update" : 0,
      		"delete" : 0,
      		"getmore" : 0,
      		"command" : 0
      	},
              ... // all the other expected serverStatus subdocuments
      	"errmsg" : "exception: Problem reading earliest entry from oplog",
      	"code" : 17347,
      	"ok" : 0
      }
      configsvr>
      

      This is a change from 2.6.x config server behavior, which used to simply ignore/exclude the "oplog" section from the serverStatus response and otherwise return normally.

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            John Morales (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: