SERVER-16714 Make serverStatus oplog section work with master-slave and config servers